[project]
name = "exp"
version = "0.1.0"
description = "A notebook-style TUI for experimenting with claude -p"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80",
]

[project.scripts]
exp = "exp.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exp"]
